--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "bootstrap-select": "^1.13.1",
     "datejs": "^1.0.0-rc3",
     "express": "^4.16.3",
     "jquery": "^3.3.1"
